Resolve "DHT Enhancement"
