# libp2p/handler.go
@@ -6,6 +6,7 @@ import (
 	"fmt"
 	"os"
 	"strconv"
+	"sync"
 
 	"github.com/gin-gonic/gin"
 	"github.com/gorilla/websocket"
@@ -83,6 +84,76 @@ func ListDHTPeers(c *gin.Context) {
 			continue
 		}
 		dhtPeers = append(dhtPeers, peer.ID)
+	}
+
+	if len(dhtPeers) == 0 {
+		c.JSON(200, gin.H{"message": "No peers found"})
+		return
+	}
+
+	dhtPeersJ, err := json.Marshal(dhtPeers)
+	if err != nil {
+		zlog.ErrorContext(c.Request.Context(), "failed to json marshal dhtPeers: %v", zap.Error(err))
+	}
+
+	span.SetAttributes(attribute.String("Response", string(dhtPeersJ)))
+	c.JSON(200, dhtPeers)
+}
+
+// ListKadDHTPeers  godoc
+// @Summary      Return list of peers which have sent a dht update
+// @Description  Gets a list of peers the libp2p node has received a dht update from
+// @Tags         p2p
+// @Produce      json
+// @Success      200  {string}	string
+// @Router       /peers/kad-dht [get]
+func ListKadDHTPeers(c *gin.Context) {
+	span := trace.SpanFromContext(c.Request.Context())
+	span.SetAttributes(attribute.String("URL", "/peers/dht"))
+	span.SetAttributes(attribute.String("MachineUUID", utils.GetMachineUUID()))
+
+	if p2p.Host == nil {
+		c.JSON(500, gin.H{"error": "Host Node hasn't yet been initialized."})
+		return
+	}
+	span.SetAttributes(attribute.String("PeerID", p2p.Host.ID().String()))
+
+	var dhtPeers []string
+	peers, err := p2p.getPeers(c, utils.GetChannelName())
+	if err != nil {
+		zlog.ErrorContext(c.Request.Context(), "failed to get peers: %v", zap.Error(err))
+		c.JSON(500, gin.H{"error": "failed to get peers"})
+		return
+	}
+	for _, peer := range peers {
+		var updates update
+		var peerInfo models.PeerData
+
+		// Add custom namespace to the key
+		namespacedKey := customNamespace + peer.ID.String()
+		bytes, err := p2p.DHT.GetValue(c, namespacedKey)
+		if err != nil {
+			if _, debugMode := os.LookupEnv("NUNET_DEBUG_VERBOSE"); debugMode {
+				zlog.Sugar().Errorf(fmt.Sprintf("Couldn't retrieve dht content for peer: %s", peer.String()))
+			}
+			continue
+		}
+		err = json.Unmarshal(bytes, &updates)
+		if err != nil {
+			if _, debugMode := os.LookupEnv("NUNET_DEBUG_VERBOSE"); debugMode {
+				zlog.Sugar().Errorf("Error unmarshalling value: %v", err)
+			}
+			continue
+		}
+		err = json.Unmarshal(updates.Data, &peerInfo)
+		if err != nil {
+			if _, debugMode := os.LookupEnv("NUNET_DEBUG_VERBOSE"); debugMode {
+				zlog.Sugar().Errorf("Error unmarshalling value: %v", err)
+			}
+			continue
+		}
+
+		dhtPeers = append(dhtPeers, peerInfo.PeerID)
 	}
 
 	if len(dhtPeers) == 0 {
@@ -321,6 +392,97 @@ func DumpDHT(c *gin.Context) {
 		if Data, ok := peerData.(models.PeerData); ok {
 			dhtContent = append(dhtContent, models.PeerData(Data))
 		}
+	}
+
+	if len(dhtContent) == 0 {
+		c.JSON(200, gin.H{"message": "No Content in DHT"})
+		return
+	}
+
+	dhtContentJ, err := json.Marshal(dhtContent)
+	if err != nil {
+		zlog.ErrorContext(c.Request.Context(), "failed to json marshal dhtContent: %v", zap.Error(err))
+	}
+
+	span.SetAttributes(attribute.String("Response", string(dhtContentJ)))
+	c.JSON(200, dhtContent)
+}
+
+// DumpKademliaDHT  godoc
+// @Summary      Return a dump of the Kademlia dht
+// @Description  Returns entire Kademlia DHT content
+// @Tags         p2p
+// @Produce      json
+// @Success      200  {string}	string
+// @Router       /kad-dht [get]
+func DumpKademliaDHT(c *gin.Context) {
+	span := trace.SpanFromContext(c.Request.Context())
+	span.SetAttributes(attribute.String("URL", "/kad-dht"))
+	span.SetAttributes(attribute.String("PeerID", p2p.Host.ID().String()))
+	span.SetAttributes(attribute.String("MachineUUID", utils.GetMachineUUID()))
+
+	if p2p.Host == nil {
+		c.JSON(500, gin.H{"error": "Host Node hasn't yet been initialized."})
+		return
+	}
+
+	peers, err := p2p.getPeers(c, utils.GetChannelName())
+	if err != nil {
+		zlog.ErrorContext(c.Request.Context(), "failed to get peers: %v", zap.Error(err))
+		c.JSON(500, gin.H{"error": "failed to get peers"})
+		return
+	}
+	dhtContentChan := make(chan models.PeerData, len(peers))
+
+	tasks := make(chan peer.AddrInfo, len(peers))
+
+	var wg sync.WaitGroup
+
+	workerCount := 5
+
+	for i := 0; i < workerCount; i++ {
+		wg.Add(1)
+		go func() {
+			defer wg.Done()
+
+			for peer := range tasks {
+				var peerInfo models.PeerData
+				var updates update
+
+				// Add custom namespace to the key
+				namespacedKey := customNamespace + peer.ID.String()
+				bytes, err := p2p.DHT.GetValue(c.Request.Context(), namespacedKey)
+				if err != nil {
+					zlog.Sugar().Errorf(fmt.Sprintf("Couldn't retrieve dht content for peer: %s", peer.String()))
+					continue
+				}
+				err = json.Unmarshal(bytes, &updates)
+				if err != nil {
+					zlog.Sugar().Errorf("Error unmarshalling value: %v", err)
+				}
+				err = json.Unmarshal(updates.Data, &peerInfo)
+				if err != nil {
+					zlog.Sugar().Errorf("Error unmarshalling value: %v", err)
+					continue
+				}
+
+				dhtContentChan <- peerInfo
+			}
+		}()
+	}
+
+	// Send tasks to the workers
+	for _, peer := range peers {
+		tasks <- peer
+	}
+	close(tasks)
+
+	wg.Wait()
+	close(dhtContentChan)
+
+	var dhtContent []models.PeerData
+	for peerData := range dhtContentChan {
+		dhtContent = append(dhtContent, peerData)
 	}
 
 	if len(dhtContent) == 0 {
